@@ -6,7 +6,7 @@
 # 
 # EDIT THIS FILE WITH CAUTION  (ntpd-opts.texi)
 # 
-# It has been AutoGen-ed  Thursday September 20, 2007 at 07:35:25 AM EDT
+# It has been AutoGen-ed  Sunday September 23, 2007 at 01:59:28 AM EDT
 # From the definitions    ntpd-opts.def
 # and the template file   aginfo.tpl
 @end ignore
@@ -268,6 +268,13 @@ configuration file directive for other options.
 @cindex ntpd-jaildir
 
 This is the ``jail directory'' option.
+
+This option has some usage constraints.  It:
+@itemize @bullet
+@item
+must be compiled in by defining @code{DROPROOT} during the compilation.
+@end itemize
+
 Chroot the server to the directory
 jaildir
 .
