@@ -1,7 +1,7 @@
-.TH NTPD 1 2007-09-20 "( 4.2.5p79)" "Programmer's Manual"
+.TH NTPD 1 2007-09-23 "( 4.2.5p79)" "Programmer's Manual"
 .\"  EDIT THIS FILE WITH CAUTION  (ntpd.1)
 .\"  
-.\"  It has been AutoGen-ed  Thursday September 20, 2007 at 07:35:23 AM EDT
+.\"  It has been AutoGen-ed  Sunday September 23, 2007 at 01:59:27 AM EDT
 .\"  From the definitions    ntpd-opts.def
 .\"  and the template file   agman1.tpl
 .\"
